Added a global images component where all images are displayed.

--- a/art-progress-track/client/src/app/home/home.component.html
+++ b/art-progress-track/client/src/app/home/home.component.html
@@ -17,3 +17,4 @@
 <td>curruser email: {{currUser.email}}</td>
 <!-- <user-page currUser ="asd"></user-page> -->
 <button class="btn btn-primary me-1" [routerLink]="['user-page']">go to user page</button>
+<app-global-images></app-global-images>
