Added the ability to add descriptions in the upload image component

--- a/art-progress-track/client/src/app/upload-image/upload-image.component.html
+++ b/art-progress-track/client/src/app/upload-image/upload-image.component.html
@@ -3,9 +3,12 @@
 <body>
   <input type = "file" (change) = "onFileChange($event)">
 
-  <img [src]= url class = "resized" alt="Place image title" id = "preview">
-
+  <img [src]= url class = "resized" alt="Preview" id = "preview">
+  
+  <div><input type="text" alt="Description" [formControl]="description"></div>
+  
   <button (click)="onUpload()">
     Upload Image
   </button>
+
 </body>
