Centered contents of image-page and added the resize button

--- a/art-progress-track/client/src/app/upload-image/upload-image.component.html
+++ b/art-progress-track/client/src/app/upload-image/upload-image.component.html
@@ -5,7 +5,7 @@
 
   <img [src]= url class = "resized" alt="Preview" id = "preview">
   
-  <div><input type="text" alt="Description" [formControl]="description"></div>
+  <div><input type="text" [formControl]="description" placeholder="Write your description here."></div>
   
   <button (click)="onUpload()">
     Upload Image
