--- a/art-progress-track/client/src/app/user-page/user-page.component.html
+++ b/art-progress-track/client/src/app/user-page/user-page.component.html
@@ -4,9 +4,9 @@ These are your images
 </div>
 <div class="horizontal">
   <tr *ngFor="let image of currUser.images">
-    <img src={{image.url}} class = "resized" [routerLink]="['/image-page', image.url]">
+    <img src={{image.url}} class = "resized" [routerLink]="['/image-page', image.url, image.description]">
     <button class="btn btn-danger" (click)="deleteImage(image)">Delete</button>
+    
   </tr>
 </div>
-<button class="btn btn-danger" (click)="testGetImageFunction()">sdfghj</button>
 <button class="btn btn-danger" [routerLink]="['/home/upload-image-page']">Upload Image</button>
