added image edit function and a search image function + touches up some html/css

--- a/art-progress-track/client/src/app/app-root/app.component.html
+++ b/art-progress-track/client/src/app/app-root/app.component.html
@@ -1,5 +1,5 @@
 <div class="nav">
-    <div><span class="astext" [routerLink]="['/']">Home</span></div>
+    <div><span class="astext" [routerLink]="['/home']">Home</span></div>
     
     <div>
       
