--- a/art-progress-track/client/src/app/home/home.component.html
+++ b/art-progress-track/client/src/app/home/home.component.html
@@ -16,4 +16,5 @@
 <td>curruser email: {{currUser.email}}</td>
 <!-- <user-page currUser ="asd"></user-page> -->
 <button class="btn btn-primary me-1" [routerLink]="['user-page']">go to user page</button>
+<button class="btn btn-primary me-1" [routerLink]="['../image-search']">go to image search</button>
 <app-global-images></app-global-images>
