cleaned up some ui stuff

--- a/art-progress-track/client/src/app/app-root/app.component.html
+++ b/art-progress-track/client/src/app/app-root/app.component.html
@@ -1,8 +1,7 @@
 <div class="nav">
-    <div><span class="astext" [routerLink]="['/home']">Home</span></div>
-    
+    <div><a class="astext" [routerLink]="['/home']">Home</a></div>
     <div>
-      
+      <span><a routerLink="image-search">Search for Images</a></span>
       <span>
         <u *ngIf="auth.user$ | async as user">
           <a routerLink="home/user-page">Your Page</a>
