--- a/art-progress-track/client/src/app/upload-image/upload-image.component.html
+++ b/art-progress-track/client/src/app/upload-image/upload-image.component.html
@@ -9,7 +9,7 @@
   
   <div><input type="text" [formControl]="description" placeholder="Write your description here."></div>
   
-  <button (click)="onUpload()">
+  <button (click)="onUpload()" class = "uploadButton" id = "uploadButton">
     Upload Image
   </button>
 
