--- a/art-progress-track/client/src/app/user-page/user-page.component.html
+++ b/art-progress-track/client/src/app/user-page/user-page.component.html
@@ -1,16 +1,21 @@
-These are your images
-<div>
-  Test Value : {{currUser.email}}
+<div class = "name">
+  {{currUser.email}}
+</div>
+<div class = "uploadImage">
+  <button class="btn btn-danger" (click) = "reveal()">Upload Image</button>
+    <div class = "uploadImageButton" id = "uploadImageButton">
+      <app-upload-image></app-upload-image>
+    </div>
+</div>
+<div id = "works">
+  Works
 </div>
 <div class="horizontal">
   <tr *ngFor="let image of currUser.images">
     <!-- <img src={{image.url}} class = "resized" [routerLink]="['/image-page', image.url, image.description]"> -->
     <img src={{image.url}} class = "resized" [routerLink]="['/user-image-edit', image._id]">
-    <button class="btn btn-danger" (click)="deleteImage(image)">Delete</button>
+    <div id = "title" [routerLink]="['/image-page', image.url, image.description, image.title,image.email]">{{image.title}}</div>
+    <!-- <button class="btn btn-danger" (click)="deleteImage(image)">Delete</button> -->
   </tr>
 </div>
 <!-- <button class="btn btn-danger" [routerLink]="['/home/upload-image-page']">Upload Image</button> -->
-<button class="btn btn-danger" (click) = "reveal()">Upload Image</button>
-<div class = "uploadImage" id = "uploadImage">
-  <app-upload-image></app-upload-image>
-</div>
