--- a/art-progress-track/client/src/app/user-page/user-page.component.html
+++ b/art-progress-track/client/src/app/user-page/user-page.component.html
@@ -13,7 +13,7 @@
 <div class="horizontal">
   <tr *ngFor="let image of currUser.images">
     <img src={{image.url}} class = "resized" [routerLink]="['/user-image-edit', image._id]">
-    <div id = "title" [routerLink]="['/image-page', image.url, image.description, image.title,image.email]">{{image.title}}</div>
+    <div id = "title" [routerLink]="['/user-image-edit', image._id]">{{image.title}}</div>
   </tr>
 </div>
 
